--- a/index.html
+++ b/index.html
@@ -8,29 +8,13 @@
 	<link href="style/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
-<h1>Battery indicator</h1>
-
-<div class="text-indicator">
-  <p id="indicator1"></p>
-  <p id="indicator2"></p>
-</div>
-
-<div class="icon-indicator">
-  <div id="battery-top"></div>
-  <div id="battery-charge"></div>
-  <div id="battery-charging"></div>
-</div>
-
-<button id="install">
-  Install app on device
-</button>
-
-<p><a href="http://thenounproject.com/noun/lightning-bolt/#icon-No17546" target="_blank">Lightning Bolt</a> designed by <a href="http://thenounproject.com/Frontera" target="_blank">Frontera Taller de Arquitectura </a> from The Noun Project.</p>
-	
+<div id="test"></div>
+<div id="test1"></div>
 </body>
 
+<script src="scripts/jquery.js"></script>
 <script src="scripts/battery.js"></script>
-<script src="scripts/install.js"></script>
+<script type="text/javascript" src="www.google.com/jsapi"></script>
+<!--<script type="text/javascript">google.load("feeds", "1");</script>-->
 
 </html>
